; ModuleID = '/home/carl/AnghaBench/linux/drivers/s390/net/extr_lcs.c_lcs_set_thread_start_bit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/s390/net/extr_lcs.c_lcs_set_thread_start_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lcs_card = type { i64, i64, i32 }

@EPERM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lcs_card*, i64)* @lcs_set_thread_start_bit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lcs_set_thread_start_bit(%struct.lcs_card* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.lcs_card*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.lcs_card* %0, %struct.lcs_card** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.lcs_card*, %struct.lcs_card** %4, align 8
  %8 = getelementptr inbounds %struct.lcs_card, %struct.lcs_card* %7, i32 0, i32 2
  %9 = load i64, i64* %6, align 8
  %10 = call i32 @spin_lock_irqsave(i32* %8, i64 %9)
  %11 = load %struct.lcs_card*, %struct.lcs_card** %4, align 8
  %12 = getelementptr inbounds %struct.lcs_card, %struct.lcs_card* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* %5, align 8
  %15 = and i64 %13, %14
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %24

17:                                               ; preds = %2
  %18 = load %struct.lcs_card*, %struct.lcs_card** %4, align 8
  %19 = getelementptr inbounds %struct.lcs_card, %struct.lcs_card* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* %5, align 8
  %22 = and i64 %20, %21
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %31

24:                                               ; preds = %17, %2
  %25 = load %struct.lcs_card*, %struct.lcs_card** %4, align 8
  %26 = getelementptr inbounds %struct.lcs_card, %struct.lcs_card* %25, i32 0, i32 2
  %27 = load i64, i64* %6, align 8
  %28 = call i32 @spin_unlock_irqrestore(i32* %26, i64 %27)
  %29 = load i32, i32* @EPERM, align 4
  %30 = sub nsw i32 0, %29
  store i32 %30, i32* %3, align 4
  br label %41

31:                                               ; preds = %17
  %32 = load i64, i64* %5, align 8
  %33 = load %struct.lcs_card*, %struct.lcs_card** %4, align 8
  %34 = getelementptr inbounds %struct.lcs_card, %struct.lcs_card* %33, i32 0, i32 1
  %35 = load i64, i64* %34, align 8
  %36 = or i64 %35, %32
  store i64 %36, i64* %34, align 8
  %37 = load %struct.lcs_card*, %struct.lcs_card** %4, align 8
  %38 = getelementptr inbounds %struct.lcs_card, %struct.lcs_card* %37, i32 0, i32 2
  %39 = load i64, i64* %6, align 8
  %40 = call i32 @spin_unlock_irqrestore(i32* %38, i64 %39)
  store i32 0, i32* %3, align 4
  br label %41

41:                                               ; preds = %31, %24
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
